# DnD-Portfolio-Project

./: README.md  pyproject.toml  run.py
backend/: .env  config.py  database.py  pyproject.toml  run.py
backend/api/: dungeon.py
backend/api/v1/: auth.py  character.py  character_action.py  game_character.py  game_session.py  otp.py  story.py
backend/models/: __init__.py  basemodel.py  character.py  character_action.py  dungeon_master.py  game_character.py  game_session.py  map.py  story.py
backend/persistance/: repository.py
backend/schemas/: auth.py  character.py  character_action.py  custom_oauth_bearer.py  dungeon_master.py  game_character.py  game_session.py  story.py
backend/service/: __init__.py  facade.py
backend/utils/: Jwt.py  dependencies.py  otp.py  password.py  redis_client.py  token.py
front/: character-selection.css  character-selection.js  characters.js  dice.css  dice.js  direct-fix.js  fix-add-character.js  fix-character-icons.js  game.js  index.html  landing.css  landing.html  landing.js  map-buttons-fix.js  map-buttons.js  map-container-fix.css  map.css  map.js  modal.css  navigation.js  saved-games.js  status.css  story.js  style.css
front/css/: home-buttons.css  modal-fix.css
front/images/: README.md
front/js/: auth.js  button-fixer.js  character-expansion.js  character-modal-fix.js  characters.js  debug-helper.js  make-markers-draggable.js  map-buttons-emergency.js  map.js  modal-buttons-fix.js  rules.js
src/components/: StorySection.jsx
src/data/: dndStories.js
src/styles/: StorySection.css
